[package]
name = "channelizer"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytemuck.workspace = true
libm.workspace = true
num.workspace = true
num-complex.workspace = true
offlinepfb-sys.workspace = true
rustdevice.workspace = true

[build-dependencies]
cc.workspace = true
