cmake_minimum_required(VERSION 3.10)
project(channelizer LANGUAGES CUDA CXX)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CUDA_STANDARD 14)
enable_language(CUDA)
SET(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS}")
add_executable(channelizer)
target_sources(channelizer PRIVATE "./src/cinterface.cu" "./src/offline_channelizer.cu" "./src/main.cu")
set_property(TARGET channelizer PROPERTY CUDA_ARCHITECTURES 75)
find_package(CUDA)
target_link_libraries(channelizer PRIVATE cufft)