cmake_minimum_required(VERSION 3.10)
project(channelizer LANGUAGES CUDA CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 17)
enable_language(CUDA)
SET(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS}")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}")
add_executable(channelizer)
target_sources(channelizer PRIVATE "./src/offline_chann_C_interface.cu" "./src/offline_channelizer.cu" "./src/main.cu")
set_property(TARGET channelizer PROPERTY CUDA_ARCHITECTURES 75)
find_package(CUDA)
find_package(OpenMP REQUIRED)
target_link_libraries(channelizer PRIVATE cufft OpenMP::OpenMP_CXX "/opt/asmlib/libaelf64o.a")