[package]
name = "streaming_channelizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.8"
num = "0.4.1"
rayon = "1.8.0"
rustfft = "6.1.0"
offlinepfb-sys = { path = "../offlinepfb-sys"}

