[package]
name = "streaming_channelizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rustfft = "6.1.0"
bessel_fun_sys = { path = "./bessel_fun_sys" }

[build-dependencies]
cc = "1.0"
